# Architect

./: README.md
.claude/: settings.local.json
backend/: .env  .env.example  pyproject.toml  test_generation.py
backend/data/catalog/: shops.json
backend/data/projects/: 62e1822f-5580-4eb3-aaed-cb76108bafc2.json  7ab78da5-1069-4fac-8049-d834d341dc28.json  906ae73f-a40f-4b77-b4a5-a393e53ba89d.json  95a810f2-1575-4fc3-85ba-4be150367727.json  9d09e32c-7d00-4a82-9b01-ad9c0defad5a.json  9e170069-bd3d-4169-aa7b-a1ef37c1fd77.json  c67c8e67-6f49-405c-a42e-53cd092a00c2.json  dc47dca3-83bb-4a97-94cd-d506031b25ca.json  ee3e1fca-f76d-4409-b2c0-3a0d21480fb2.json
backend/data/projects/catalog/: custom_items.json
backend/data/projects/catalog/vendor_index/: akijceramics.com.json  ashleyfurniture.com.json  cb2.com.json  hatil.com.json  ikea.com.json  rakceramics.com.json
backend/src/: config.py  dependencies.py  main.py
backend/src/agents/: orchestrator.py
backend/src/agents/skills/: color_harmonizer.py  consistency_guard.py  prompt_composer.py  spatial_reasoner.py  style_coherence.py
backend/src/agents/templates/: base_room.py  style_definitions.py
backend/src/models/: __init__.py  catalog.py  design_context.py  generation.py  project.py  room.py
backend/src/routers/: catalog.py  catalog_vendors.py  generation.py  projects.py  rooms.py  scraper.py
backend/src/services/: catalog_indexer.py  openrouter.py
backend/src/storage/: catalog_store.py  json_store.py  vendor_index_store.py
frontend/: angular.json  package-lock.json  package.json
(+31 files in other folders)
